Refactor vertex implementation to use native gemini classes and remove duplicate redundant code